--- a/docs/SmiscOverview.Rmd
+++ b/docs/SmiscOverview.Rmd
@@ -9,7 +9,7 @@ I have organized the documentation into 11 groups of functions that have similar
 
 ## Package installation 
 
-You can install the package from [CRAN](https://cran.r-project.org/) or from [GitHub](https://github.com):
+You can install the package from [CRAN](https://CRAN.R-project.org/) or from [GitHub](https://github.com):
 
 ### CRAN
 
@@ -23,7 +23,7 @@ You can install from  [GitHub](https://github.com) using the [devtools](https://
 in which case you'll need these prerequistites in order to compile the C code in the `Smisc` package:
 
 - Mac: you'll need [Xcode](https://developer.apple.com/xcode/)
-- Windows: you'll need to install [R tools](https://cran.r-project.org/bin/windows/Rtools/)
+- Windows: you'll need to install [R tools](https://CRAN.R-project.org/bin/windows/Rtools/)
 - Linux/Unix: compilation should take place automatically
 
 Now do the following in R:
